--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -15,14 +15,18 @@ jobs:
         run: |
           set -euo pipefail
           echo "Setting execution_mode=auto..."
-          curl --fail-with-body -sS -X POST "${{ secrets.BDV_BASE_URL }}/config/execution-mode" \
+
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            -X POST "${{ secrets.BDV_BASE_URL }}/config/execution-mode" \
             -H "accept: application/json" \
-            -H "content-type: application/json" \
+            -H "Content-Type: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             -d '{"mode":"auto"}' | head -c 2000
+
           echo
           echo "Config status:"
-          curl --fail-with-body -sS "${{ secrets.BDV_BASE_URL }}/config/status" \
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            "${{ secrets.BDV_BASE_URL }}/config/status" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
           echo
@@ -30,7 +34,8 @@ jobs:
       - name: Call /agent/scan
         run: |
           set -euo pipefail
-          curl --fail-with-body -sS "${{ secrets.BDV_BASE_URL }}/agent/scan?force_analysis=0" \
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            "${{ secrets.BDV_BASE_URL }}/agent/scan?force_analysis=0" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             | head -c 2000
@@ -39,7 +44,8 @@ jobs:
       - name: Call /monitor/tick
         run: |
           set -euo pipefail
-          curl --fail-with-body -sS "${{ secrets.BDV_BASE_URL }}/monitor/tick" \
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            "${{ secrets.BDV_BASE_URL }}/monitor/tick" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             | head -c 2000
