--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -11,29 +11,35 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: Force AUTO execution mode (and log config)
+      - name: Ensure AUTO execution mode (and log config)
+        shell: bash
         run: |
           set -euo pipefail
-          echo "Setting execution_mode=auto..."
 
-          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
-            -X POST "${{ secrets.BDV_BASE_URL }}/config/execution-mode" \
-            -H "accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            --data-binary @- <<'JSON' | head -c 2000
-          {"mode":"auto"}
-          JSON
-
-          echo
-          echo "Config status:"
-          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+          echo "Checking config status..."
+          STATUS="$(curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
             "${{ secrets.BDV_BASE_URL }}/config/status" \
             -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
+            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}")"
+
+          echo "$STATUS" | head -c 2000
           echo
 
+          if echo "$STATUS" | grep -q '"execution_mode":"auto"\|"mode":"auto"'; then
+            echo "Already AUTO ✅"
+          else
+            echo "Setting execution_mode=auto..."
+            printf '%s' '{"mode":"auto"}' | curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+              -X POST "${{ secrets.BDV_BASE_URL }}/config/execution-mode" \
+              -H "accept: application/json" \
+              -H "Content-Type: application/json" \
+              -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
+              --data-binary @- | head -c 2000
+            echo
+          fi
+
       - name: Call /agent/scan
+        shell: bash
         run: |
           set -euo pipefail
           curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
@@ -44,6 +50,7 @@ jobs:
           echo
 
       - name: Call /monitor/tick
+        shell: bash
         run: |
           set -euo pipefail
           curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
