--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -11,111 +11,46 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: Ensure AUTO execution mode (try multiple payload styles)
-        shell: bash
+      - name: Ensure AUTO execution mode (querystring) + log config
         run: |
           set -euo pipefail
 
-          BASE="${{ secrets.BDV_BASE_URL }}"
-          SECRET="${{ secrets.BDV_AGENT_SECRET }}"
-
           echo "Checking config status..."
-          curl -sS "${BASE}/config/status" \
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            "${{ secrets.BDV_BASE_URL }}/config/status" \
             -H "accept: application/json" \
-            -H "x-bdv-secret: ${SECRET}"
-          echo; echo
+            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
+          echo
 
-          echo "Attempting to set execution_mode=auto with multiple methods..."
+          echo "Setting execution_mode=auto (querystring)..."
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            -X POST "${{ secrets.BDV_BASE_URL }}/config/execution-mode?mode=auto" \
+            -H "accept: application/json" \
+            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
+          echo
 
-          try() {
-            local label="$1"
-            shift
-            echo "---- $label ----"
-            # We do NOT fail the whole step here; we capture code and continue.
-            set +e
-            resp="$(curl -sS -w "\nHTTP_CODE:%{http_code}\n" "$@" )"
-            code="$(printf "%s" "$resp" | sed -n 's/^HTTP_CODE://p')"
-            body="$(printf "%s" "$resp" | sed '/^HTTP_CODE:/d')"
-            echo "$body" | head -c 2000
-            echo
-            echo "HTTP $code"
-            set -e
-            if [ "$code" = "200" ]; then
-              echo "✅ Success with: $label"
-              return 0
-            fi
-            return 1
-          }
-
-          # 1) JSON object { "mode": "auto" }
-          if try "JSON object mode" \
-            -X POST "${BASE}/config/execution-mode" \
+          echo "Re-check config status..."
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            "${{ secrets.BDV_BASE_URL }}/config/status" \
             -H "accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "x-bdv-secret: ${SECRET}" \
-            --data-binary '{"mode":"auto"}'
-          then
-            true
-          # 2) JSON object { "execution_mode": "auto" }
-          elif try "JSON object execution_mode" \
-            -X POST "${BASE}/config/execution-mode" \
-            -H "accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "x-bdv-secret: ${SECRET}" \
-            --data-binary '{"execution_mode":"auto"}'
-          then
-            true
-          # 3) JSON string "auto" (algunos endpoints esperan string puro)
-          elif try "JSON string" \
-            -X POST "${BASE}/config/execution-mode" \
-            -H "accept: application/json" \
-            -H "Content-Type: application/json" \
-            -H "x-bdv-secret: ${SECRET}" \
-            --data-binary '"auto"'
-          then
-            true
-          # 4) Form urlencoded mode=auto
-          elif try "FORM urlencoded" \
-            -X POST "${BASE}/config/execution-mode" \
-            -H "accept: application/json" \
-            -H "Content-Type: application/x-www-form-urlencoded" \
-            -H "x-bdv-secret: ${SECRET}" \
-            --data-binary 'mode=auto'
-          then
-            true
-          # 5) Querystring ?mode=auto (sin body)
-          elif try "Querystring" \
-            -X POST "${BASE}/config/execution-mode?mode=auto" \
-            -H "accept: application/json" \
-            -H "x-bdv-secret: ${SECRET}"
-          then
-            true
-          else
-            echo "❌ None of the methods worked. Backend must be fixed."
-            exit 1
-          fi
-
-          echo; echo "Re-check config status..."
-          curl -sS "${BASE}/config/status" \
-            -H "accept: application/json" \
-            -H "x-bdv-secret: ${SECRET}"
+            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
           echo
 
       - name: Call /agent/scan
-        shell: bash
         run: |
           set -euo pipefail
-          curl -sS "${{ secrets.BDV_BASE_URL }}/agent/scan?force_analysis=0" \
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            "${{ secrets.BDV_BASE_URL }}/agent/scan?force_analysis=0" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             | head -c 2000
           echo
 
       - name: Call /monitor/tick
-        shell: bash
         run: |
           set -euo pipefail
-          curl -sS "${{ secrets.BDV_BASE_URL }}/monitor/tick" \
+          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+            "${{ secrets.BDV_BASE_URL }}/monitor/tick" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             | head -c 2000
