--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -11,47 +11,73 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: Ensure AUTO execution mode (querystring) + log config
+      - name: Ensure AUTO execution mode (querystring) + log config (robust)
         run: |
           set -euo pipefail
 
           echo "Checking config status..."
-          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
+            -D /tmp/headers_status.txt \
+            -o /tmp/body_status.txt \
             "${{ secrets.BDV_BASE_URL }}/config/status" \
             -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
+            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
+            -w "\nHTTP %{http_code}\n"
+
+          echo "---- headers (status) ----"
+          head -c 2000 /tmp/headers_status.txt || true
+          echo
+          echo "---- body (status) ----"
+          head -c 2000 /tmp/body_status.txt || true
           echo
 
-          echo "Setting execution_mode=auto (querystring)..."
-          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+          echo "Setting execution_mode=auto via querystring..."
+          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
+            -D /tmp/headers_set.txt \
+            -o /tmp/body_set.txt \
             -X POST "${{ secrets.BDV_BASE_URL }}/config/execution-mode?mode=auto" \
             -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
+            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
+            -w "\nHTTP %{http_code}\n"
+
+          echo "---- headers (set) ----"
+          head -c 2000 /tmp/headers_set.txt || true
+          echo
+          echo "---- body (set) ----"
+          head -c 2000 /tmp/body_set.txt || true
           echo
 
           echo "Re-check config status..."
-          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
+            -o /tmp/body_status2.txt \
             "${{ secrets.BDV_BASE_URL }}/config/status" \
             -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" | head -c 2000
+            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
+            -w "\nHTTP %{http_code}\n"
+
+          head -c 2000 /tmp/body_status2.txt || true
           echo
 
       - name: Call /agent/scan
         run: |
           set -euo pipefail
-          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
+            -o /tmp/body_scan.txt \
             "${{ secrets.BDV_BASE_URL }}/agent/scan?force_analysis=0" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            | head -c 2000
+            -w "\nHTTP %{http_code}\n"
+          head -c 2000 /tmp/body_scan.txt || true
           echo
 
       - name: Call /monitor/tick
         run: |
           set -euo pipefail
-          curl --fail-with-body -sS --retry 3 --retry-delay 2 --retry-all-errors \
+          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
+            -o /tmp/body_tick.txt \
             "${{ secrets.BDV_BASE_URL }}/monitor/tick" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            | head -c 2000
+            -w "\nHTTP %{http_code}\n"
+          head -c 2000 /tmp/body_tick.txt || true
           echo
