--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -12,72 +12,117 @@ jobs:
 
     steps:
       - name: Ensure AUTO execution mode (querystring) + log config (robust)
+        shell: bash
         run: |
           set -euo pipefail
 
-          echo "Checking config status..."
-          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
-            -D /tmp/headers_status.txt \
-            -o /tmp/body_status.txt \
-            "${{ secrets.BDV_BASE_URL }}/config/status" \
-            -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            -w "\nHTTP %{http_code}\n"
+          hit () {
+            local label="$1"
+            local method="$2"
+            local url="$3"
+            local out_headers="$4"
+            local out_body="$5"
+            local out_code="$6"
 
-          echo "---- headers (status) ----"
-          head -c 2000 /tmp/headers_status.txt || true
-          echo
-          echo "---- body (status) ----"
-          head -c 2000 /tmp/body_status.txt || true
-          echo
+            echo "===== ${label} ====="
+            echo "${method} ${url}"
 
-          echo "Setting execution_mode=auto via querystring..."
-          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
-            -D /tmp/headers_set.txt \
-            -o /tmp/body_set.txt \
-            -X POST "${{ secrets.BDV_BASE_URL }}/config/execution-mode?mode=auto" \
-            -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            -w "\nHTTP %{http_code}\n"
+            # Nota: --fail-with-body hace que curl salga !=0 en 4xx/5xx,
+            # pero igual guardamos headers/body para debug.
+            curl -sS --fail-with-body \
+              --retry 5 --retry-delay 2 --retry-all-errors \
+              --connect-timeout 5 --max-time 25 \
+              -X "${method}" \
+              -D "${out_headers}" \
+              -o "${out_body}" \
+              -H "accept: application/json" \
+              -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
+              -w "%{http_code}" \
+              "${url}" > "${out_code}"
 
-          echo "---- headers (set) ----"
-          head -c 2000 /tmp/headers_set.txt || true
-          echo
-          echo "---- body (set) ----"
-          head -c 2000 /tmp/body_set.txt || true
-          echo
+            local code
+            code="$(cat "${out_code}" || true)"
+            echo "HTTP ${code}"
 
-          echo "Re-check config status..."
-          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
-            -o /tmp/body_status2.txt \
-            "${{ secrets.BDV_BASE_URL }}/config/status" \
-            -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            -w "\nHTTP %{http_code}\n"
+            echo "---- headers (${label}) ----"
+            head -c 2000 "${out_headers}" || true
+            echo
+            echo "---- body (${label}) ----"
+            head -c 2000 "${out_body}" || true
+            echo
 
-          head -c 2000 /tmp/body_status2.txt || true
-          echo
+            # Safety: si por alguna razón curl no falló pero code != 200, cortamos aquí.
+            if [[ "${code}" != "200" ]]; then
+              echo "ERROR: ${label} returned HTTP ${code}"
+              exit 1
+            fi
+          }
+
+          BASE="${{ secrets.BDV_BASE_URL }}"
+
+          hit "config status (before)" "GET"  "${BASE}/config/status" \
+            "/tmp/headers_status.txt" "/tmp/body_status.txt" "/tmp/code_status.txt"
+
+          hit "set exec_mode=auto (querystring)" "POST" "${BASE}/config/execution-mode?mode=auto" \
+            "/tmp/headers_set.txt" "/tmp/body_set.txt" "/tmp/code_set.txt"
+
+          hit "config status (after)" "GET" "${BASE}/config/status" \
+            "/tmp/headers_status2.txt" "/tmp/body_status2.txt" "/tmp/code_status2.txt"
 
       - name: Call /agent/scan
+        shell: bash
         run: |
           set -euo pipefail
-          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
+          BASE="${{ secrets.BDV_BASE_URL }}"
+
+          curl -sS --fail-with-body \
+            --retry 5 --retry-delay 2 --retry-all-errors \
+            --connect-timeout 5 --max-time 25 \
+            -D /tmp/headers_scan.txt \
             -o /tmp/body_scan.txt \
-            "${{ secrets.BDV_BASE_URL }}/agent/scan?force_analysis=0" \
+            "${BASE}/agent/scan?force_analysis=0" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            -w "\nHTTP %{http_code}\n"
+            -w "%{http_code}" > /tmp/code_scan.txt
+
+          echo "HTTP $(cat /tmp/code_scan.txt || true)"
+          echo "---- headers (scan) ----"
+          head -c 2000 /tmp/headers_scan.txt || true
+          echo
+          echo "---- body (scan) ----"
           head -c 2000 /tmp/body_scan.txt || true
           echo
 
+          if [[ "$(cat /tmp/code_scan.txt || true)" != "200" ]]; then
+            echo "ERROR: /agent/scan returned non-200"
+            exit 1
+          fi
+
       - name: Call /monitor/tick
+        shell: bash
         run: |
           set -euo pipefail
-          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
+          BASE="${{ secrets.BDV_BASE_URL }}"
+
+          curl -sS --fail-with-body \
+            --retry 5 --retry-delay 2 --retry-all-errors \
+            --connect-timeout 5 --max-time 25 \
+            -D /tmp/headers_tick.txt \
             -o /tmp/body_tick.txt \
-            "${{ secrets.BDV_BASE_URL }}/monitor/tick" \
+            "${BASE}/monitor/tick" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            -w "\nHTTP %{http_code}\n"
+            -w "%{http_code}" > /tmp/code_tick.txt
+
+          echo "HTTP $(cat /tmp/code_tick.txt || true)"
+          echo "---- headers (tick) ----"
+          head -c 2000 /tmp/headers_tick.txt || true
+          echo
+          echo "---- body (tick) ----"
           head -c 2000 /tmp/body_tick.txt || true
           echo
+
+          if [[ "$(cat /tmp/code_tick.txt || true)" != "200" ]]; then
+            echo "ERROR: /monitor/tick returned non-200"
+            exit 1
+          fi
