--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -5,13 +5,17 @@ on:
     - cron: "*/5 * * * *"
   workflow_dispatch:
 
+concurrency:
+  group: bdv-cron
+  cancel-in-progress: true
+
 jobs:
   bdv:
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
     steps:
-      - name: Ensure AUTO execution mode (querystring) + log config (robust)
+      - name: Ensure AUTO execution mode + log config (robust)
         shell: bash
         run: |
           set -euo pipefail
@@ -25,9 +29,6 @@ jobs:
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             -w "\nHTTP %{http_code}\n"
 
-          echo "---- headers (status) ----"
-          head -c 2000 /tmp/headers_status.txt || true
-          echo
           echo "---- body (status) ----"
           head -c 2000 /tmp/body_status.txt || true
           echo
@@ -41,45 +42,54 @@ jobs:
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             -w "\nHTTP %{http_code}\n"
 
-          echo "---- headers (set) ----"
-          head -c 2000 /tmp/headers_set.txt || true
-          echo
           echo "---- body (set) ----"
           head -c 2000 /tmp/body_set.txt || true
           echo
 
-          echo "Re-check config status..."
-          curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
-            -o /tmp/body_status2.txt \
-            "${{ secrets.BDV_BASE_URL }}/config/status" \
-            -H "accept: application/json" \
-            -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            -w "\nHTTP %{http_code}\n"
-          head -c 2000 /tmp/body_status2.txt || true
-          echo
-
-      - name: Call /agent/scan
+      - name: Scan + conditional monitor (skip if out of RTH)
         shell: bash
         run: |
           set -euo pipefail
+
+          echo "Calling /agent/scan..."
+          # NO usamos --fail-with-body aquí porque fuera de RTH puede devolver status yellow y eso NO debe romper.
           curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
             -o /tmp/body_scan.txt \
             "${{ secrets.BDV_BASE_URL }}/agent/scan?force_analysis=0" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
-            -w "\nHTTP %{http_code}\n"
+            -w "\nHTTP %{http_code}\n" || true
+
+          echo "---- body (scan) ----"
           head -c 2000 /tmp/body_scan.txt || true
           echo
 
-      - name: Call /monitor/tick
-        shell: bash
-        run: |
-          set -euo pipefail
+          # Parse JSON para leer in_rth y decidir
+          IN_RTH="$(python3 - <<'PY'
+import json
+p="/tmp/body_scan.txt"
+try:
+    d=json.load(open(p))
+    print("true" if d.get("in_rth") else "false")
+except Exception:
+    print("false")
+PY
+)"
+          echo "in_rth=$IN_RTH"
+
+          if [ "$IN_RTH" != "true" ]; then
+            echo "Outside RTH -> skipping /monitor/tick (exit 0)"
+            exit 0
+          fi
+
+          echo "In RTH -> calling /monitor/tick..."
           curl -sS --retry 5 --retry-delay 2 --retry-all-errors --max-time 20 \
             -o /tmp/body_tick.txt \
             "${{ secrets.BDV_BASE_URL }}/monitor/tick" \
             -H "accept: application/json" \
             -H "x-bdv-secret: ${{ secrets.BDV_AGENT_SECRET }}" \
             -w "\nHTTP %{http_code}\n"
+
+          echo "---- body (tick) ----"
           head -c 2000 /tmp/body_tick.txt || true
           echo
