--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -19,6 +19,9 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y jq
 
+          # Normaliza BASE_URL (quita slash final si existe)
+          BASE_URL="${BASE_URL%/}"
+
           # DEBUG SEGURO: NO imprime el secret, solo confirma que existe
           echo "BASE_URL=$BASE_URL"
           echo "BDV_AGENT_SECRET_LEN=${#BDV_AGENT_SECRET}"
@@ -49,11 +52,17 @@ jobs:
 
           echo "Inside RTH: now=$hhmm NY -> running endpoints"
 
+          # Usa el MISMO header que Swagger: x-bdv-secret
+          auth_headers() {
+            echo "-H" "x-bdv-secret: ${BDV_AGENT_SECRET}" "-H" "accept: application/json" "-H" "Content-Type: application/json"
+          }
+
           get_json() {
             local path="$1"
             local url="${BASE_URL}${path}"
             curl -sS \
-              -H "X-BDV-SECRET: ${BDV_AGENT_SECRET}" \
+              -H "x-bdv-secret: ${BDV_AGENT_SECRET}" \
+              -H "accept: application/json" \
               -H "Content-Type: application/json" \
               --connect-timeout 10 --max-time 30 \
               "$url"
@@ -64,18 +73,22 @@ jobs:
             local path="$2"
             local url="${BASE_URL}${path}"
             local tmp_body
+            local http_code
+            local snippet
+
             tmp_body="$(mktemp)"
 
             http_code=$(
               curl -sS -o "$tmp_body" -w "%{http_code}" \
                 -X "$method" \
-                -H "X-BDV-SECRET: ${BDV_AGENT_SECRET}" \
+                -H "x-bdv-secret: ${BDV_AGENT_SECRET}" \
+                -H "accept: application/json" \
                 -H "Content-Type: application/json" \
                 --connect-timeout 10 --max-time 30 \
                 "$url" || echo "000"
             )
 
-            snippet=$(head -c 300 "$tmp_body" | tr '\n' ' ' | sed 's/  */ /g')
+            snippet=$(head -c 500 "$tmp_body" | tr '\n' ' ' | sed 's/  */ /g')
             rm -f "$tmp_body"
 
             echo "ENDPOINT ${method} ${path} -> http_code=${http_code} | body_snippet=${snippet}"
@@ -94,39 +107,5 @@ jobs:
           # 1) Set execution mode AUTO
           call_method "POST" "/config/execution-mode?mode=auto"
 
-          # 2) Set risk mode MEDIUM (lo que tú quieres)
-          call_method "POST" "/config/risk-mode?mode=medium"
-
-          # 3) Validate config is actually in auto/medium
-          cfg="$(get_json "/config/status")"
-          mode="$(echo "$cfg" | jq -r '.execution_mode // empty')"
-          risk="$(echo "$cfg" | jq -r '.risk_mode // empty')"
-          echo "CHECK config/status -> execution_mode=${mode} risk_mode=${risk}"
-
-          if [ "$mode" != "auto" ]; then
-            echo "FAIL: execution_mode is not auto after POST /config/execution-mode"
-            echo "CFG_SNIPPET: $(echo "$cfg" | head -c 400 | tr '\n' ' ')"
-            exit 1
-          fi
-
-          if [ "$risk" != "medium" ]; then
-            echo "FAIL: risk_mode is not medium after POST /config/risk-mode"
-            echo "CFG_SNIPPET: $(echo "$cfg" | head -c 400 | tr '\n' ' ')"
-            exit 1
-          fi
-
-          # 4) Run scan
-          call "/agent/scan"
-
-          # 5) Tick (debe correr dentro de RTH)
-          tick="$(get_json "/monitor/tick")"
-          tstatus="$(echo "$tick" | jq -r '.status // empty')"
-          treason="$(echo "$tick" | jq -r '.reason // empty')"
-          echo "CHECK monitor/tick -> status=${tstatus} reason=${treason}"
-
-          if [ "$tstatus" = "skipped" ]; then
-            echo "FAIL: monitor/tick skipped inside RTH -> ${treason}"
-            exit 1
-          fi
-
-          echo "All checks OK inside RTH."
+          # 2) Set risk mode MEDIUM
+          call_method "POST_
